# AAE4011--Object-Detection

./: CMakeLists.txt  README.md  package.xml
launch/: detect.launch
scripts/: detector_node.py  extract_from_bag.py  web_ui.py
