<?xml version="1.0"?>
<package format="2">
  <name>aae4011_vehicle_detection</name>
  <version>1.0.0</version>
  <description>ROS-based vehicle detection from rosbag using YOLOv8 — AAE4011 Assignment 1 Q3</description>
  <maintainer email="your_email@connect.polyu.hk">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
</package>
